--- a/course_project/SorokinEL_course_project.ipynb
+++ b/course_project/SorokinEL_course_project.ipynb
@@ -1747,19 +1747,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Years in current job            4.95%\n",
-       "Bankruptcies                    0.19%\n",
-       "Years in current job - float    4.95%\n",
+       "Annual Income                   20.76%\n",
+       "Years in current job             4.95%\n",
+       "Months since last delinquent    54.41%\n",
+       "Bankruptcies                     0.19%\n",
+       "Credit Score                    20.76%\n",
+       "Years in current job - float     4.95%\n",
        "dtype: object"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1798,15 +1801,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Число выбрасов = 0\n",
-      "Процент выбрасов = 0.0%\n"
+      "Число выбрасов = 400\n",
+      "Процент выбрасов = 5.33%\n"
      ]
     }
    ],
