Update Lesson 3. Building a classification model.ipynb

--- a/Lesson 3. Building a classification model/Lesson 3. Building a classification model.ipynb
+++ b/Lesson 3. Building a classification model/Lesson 3. Building a classification model.ipynb
@@ -25,7 +25,7 @@
     "_XGBoost:_\n",
     "- Достаточно старая модель, разработанная в 2014 году\n",
     "- Склонен к быстрому переобучению\n",
-    "- Имеет большой объем гиперпараметров\n",
+    "- Имеет большой количество гиперпараметров\n",
     "- Имена некоторых гиперпараметров отличается от аналогичных в других моделях\n",
     "- Использует алгоритм предварительной сортировки и алгоритм на основе гистограммы, для поиска наилучшего разбиения\n",
     "- Не работает с категориальными и строковыми данными\n",
@@ -33,7 +33,7 @@
     "_LightGBM:_\n",
     "- Одна из новых моделей, разработанная в 2017 году\n",
     "- Отличается высокой скоростью\n",
-    "- Использует алгорит градиентного одностороннего разбиения - GOSS\n",
+    "- Использует алгоритм градиентного одностороннего разбиения - GOSS\n",
     "- Умеет работать с категориальными признаками, \n",
     "- Нужно приводить признаки которые МЫ считаем категорийными к типу *int*.\n",
     "- Не работает со строковыми типами\n",
@@ -47,8 +47,7 @@
     "- Один из самых долгих алгоритмов\n",
     "- Имеет графическое представление\n",
     "- По умолчанию выдает информацию по каждой итерации\n",
-    "- Нету гиперпараметра для настройки минимального веса ответвления (min_child_weight)\n",
-    "- Не имеет гиперпараметра для настройки подмножеств"
+    "- Не имеет гиперпараметров для настройки подмножеств и минимального размера ответвления (min_child_weight)"
    ]
   },
   {
