--- a/Lesson 3. Building a classification model/Lesson 3. Building a classification model.ipynb
+++ b/Lesson 3. Building a classification model/Lesson 3. Building a classification model.ipynb
@@ -12,9 +12,10 @@
     "\n",
     "- __macro__ - считает по каждой категории (TP, FP, TN, FN), затем находит их не взвешенное среднее значение.<br>\n",
     "При этом не учитывается дисбаланс предсказываемых классов.<br>\n",
-    "Следовательно используется если исследуемые классы имеют разное количество.\n",
+    "Следовательно используется если исследуемые классы имеют равное количество объектов.\n",
     "\n",
-    "- __weighted__ - считает по каждой категории (TP, FP, TN, FN), затем находит их взвешенное среднее значение по количеству истинных вариантов для каждого класса. Является альтернативой для \"macro\" при подсчете не сбалансированных классов. Это может привести к результату, который не находится между _точностью_ и _охватом_."
+    "- __weighted__ - считает по каждой категории (TP, FP, TN, FN), затем находит их взвешенное среднее значение по количеству истинных вариантов для каждого класса. Является альтернативой для \"macro\" при подсчете не сбалансированных классов. Это может привести к результату, который не находится между _точностью_ и _охватом_.<br>\n",
+    "Следовательно используется если исследуемые классы имеют не равное количество объектов."
    ]
   },
   {
@@ -77,7 +78,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.11"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
