--- a/course_project/SorokinEL_course_project.ipynb
+++ b/course_project/SorokinEL_course_project.ipynb
@@ -1060,10 +1060,9 @@
    "source": [
     "class Preprocessing:\n",
     "    \n",
-    "    def __init__(self, df, target, features):\n",
+    "    def __init__(self, df, features):\n",
     "        \n",
     "        self.df = df\n",
-    "        self.target = target\n",
     "        self.features = features\n",
     "        \n",
     "    def concat_values(self):\n",
@@ -1235,7 +1234,7 @@
     "                 'Current Credit Balance', 'Monthly Debt', 'Credit Score']\n",
     "\n",
     "# инициализируем класс предобработки\n",
-    "xy_prep = Preprocessing(df=Xy_df, target=TARGET_NAME, features=FEATURE_NAMES)"
+    "xy_prep = Preprocessing(df=Xy_df, features=FEATURE_NAMES)"
    ]
   },
   {
