--- a/course_project/SorokinEL_course_project.ipynb
+++ b/course_project/SorokinEL_course_project.ipynb
@@ -26,10 +26,9 @@
     "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from lightgbm import LGBMRegressor\n",
-    "from xgboost import XGBRegressor\n",
-    "from catboost import CatBoostRegressor\n",
+    "from lightgbm import LGBMRegressor, LGBMClassifier\n",
+    "from xgboost import XGBRegressor, XGBClassifier\n",
+    "from catboost import CatBoostRegressor, CatBoostClassifier\n",
     "\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
