--- a/course_project/SorokinEL_course_project.ipynb
+++ b/course_project/SorokinEL_course_project.ipynb
@@ -1924,15 +1924,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# отбор признаков\n",
-    "columns = ['Annual Income', 'Tax Liens', 'Number of Open Accounts', 'Maximum Open Credit', 'Number of Credit Problems',\n",
-    "           'Term', 'Current Credit Balance', 'Monthly Debt', 'Credit Score', 'Credit Default']\n",
+    "# Отбор признаков\n",
+    "columns = ['Annual Income', 'Tax Liens', 'Number of Open Accounts', 'Maximum Open Credit', 'Number of Credit Problems', \n",
+    "           'Term', 'Current Credit Balance', 'Monthly Debt', 'Credit Score', 'Credit Default', 'Current Loan Amount']\n",
+    "\n",
+    "xy_prep.standard_data()\n",
     "\n",
     "Xy = xy_prep.df\n",
     "Xy = Xy[columns]\n",
-    "\n",
-    "# # Стандартизация\n",
-    "xy_prep.standard_data()\n",
     "\n",
     "# Разбмение на X и y\n",
     "X = Xy.drop('Credit Default', axis=1)\n",
@@ -1941,7 +1940,7 @@
     "# Разбиение на train и test\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, shuffle=True, test_size=0.2, random_state=42)\n",
     "\n",
-    "# балансировка классов\n",
+    "# Балансировка классов\n",
     "df_to_balansing = pd.concat([X_train, y_train], axis=1)\n",
     "\n",
     "df_balanced = balancing(df=df_to_balansing, target_name=TARGET_NAME)\n",
@@ -1969,10 +1968,10 @@
      "output_type": "stream",
      "text": [
       "f1 score:\n",
-      " \ttrain = 0.81\n",
+      " \ttrain = 0.83\n",
       " \ttest = 0.4\n",
       "\n",
-      " \tdiff = 0.42\n"
+      " \tdiff = 0.43\n"
      ]
     }
    ],
@@ -2003,10 +2002,10 @@
      "output_type": "stream",
      "text": [
       "f1 score:\n",
-      " \ttrain = 0.94\n",
+      " \ttrain = 0.93\n",
       " \ttest = 0.37\n",
       "\n",
-      " \tdiff = 0.57\n"
+      " \tdiff = 0.56\n"
      ]
     }
    ],
@@ -2037,15 +2036,15 @@
      "output_type": "stream",
      "text": [
       "f1 score:\n",
-      " \ttrain = 0.77\n",
-      " \ttest = 0.42\n",
+      " \ttrain = 0.56\n",
+      " \ttest = 0.45\n",
       "\n",
-      " \tdiff = 0.35\n"
+      " \tdiff = 0.11\n"
      ]
     }
    ],
    "source": [
-    "model_catb = CatBoostClassifier(random_state=42, silent=True)\n",
+    "model_catb = CatBoostClassifier(random_state=42, silent=True, iterations=690, learning_rate=0.1, depth=1)\n",
     "model_catb.fit(X_train, y_train)\n",
     "\n",
     "y_train_pred = model_catb.predict(X_train)\n",
@@ -2053,13 +2052,6 @@
     "\n",
     "evaluation_classification(y_train, y_train_pred, y_test, y_test_pred)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
