--- a/lesson 4  Assessment and interpretation of the resulting model. Discussion of the course project/lesson 4 Assessment and interpretation of the resulting model..ipynb
+++ b/lesson 4  Assessment and interpretation of the resulting model. Discussion of the course project/lesson 4 Assessment and interpretation of the resulting model..ipynb
@@ -7,14 +7,21 @@
     "1. Расскажите, как работает регуляризация в решающих деревьях, какие параметры мы штрафуем в данных алгоритмах?\n",
     "\n",
     "\n",
-    "- Региляризация __штрафует__ модель за шум в признаках, __прибавляя к весам на каждой итерации__ переменныю __зависящую от значения весов__ с предыдущей итерации умноженную на коэффициент $\\lambda$. L1 более мягкая - прибавляет вектор весов, L2 более жесткая - прибавляет квадрат весов"
+    "- Региляризация __штрафует__ модель за шум в признаках, __прибавляя к весам на каждой итерации__ переменныю __зависящую от значения весов__ с предыдущей итерации умноженную на коэффициент $\\lambda$. L1 более мягкая - прибавляет вектор весов, L2 более жесткая - прибавляет квадрат весов\n",
+    "\n",
+    "\n",
+    "2. По какому принципу рассчитывается \"важность признака (feature_importance)\" в ансамблях деревьев?\n",
+    "\n",
+    "\n",
+    "- Показывает на сколько меняется прогниз при __изменении значений__ признака. Чем больше __значение важности__, тем больше будет изменение __значения прогноза__."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. По какому принципу рассчитывается \"важность признака (feature_importance)\" в ансамблях деревьев?"
+    "Источники:\n",
+    "- [feature importance](https://catboost.ai/docs/concepts/fstr.html#fstr)"
    ]
   }
  ],
@@ -34,7 +41,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.11"
   }
  },
  "nbformat": 4,
