--- a/course_project/sorokinel-course-project.ipynb
+++ b/course_project/sorokinel-course-project.ipynb
@@ -1139,21 +1139,37 @@
     "        \n",
     "        self.missMSLD = 'Изначально пуст'\n",
     "        self.missBankruptcies = 'Изначально пуст'\n",
-    "        self.emmissMOC = 'Изначально пуст'\n",
-    "        self.model = 'Изначально пуст'\n",
     "        \n",
-    "    def concat_values(self):\n",
+    "        self.emmissMOC = 'Изначально пуст'\n",
+    "        \n",
+    "        self.modelAnIn = 'Изначально пуст'\n",
+    "        self.modelCrSc = 'Изначально пуст'\n",
+    "        self.modelCLA = 'Изначально пуст'\n",
+    "        \n",
+    "        self.columnsAnIn = ['Annual Income', 'Home Ownership', 'Tax Liens', 'Number of Open Accounts', 'Maximum Open Credit', \n",
+    "                            'Number of Credit Problems', 'Months since last delinquent', 'Current Loan Amount', \n",
+    "                            'Current Credit Balance', 'Monthly Debt', 'Credit Score']\n",
+    "        self.columnsCrSc = ['Credit Score', 'Term', 'Current Loan Amount', 'Home Ownership', 'Annual Income', \n",
+    "                            'Years of Credit History', 'Maximum Open Credit', 'Number of Credit Problems', \n",
+    "                            'Months since last delinquent', 'Bankruptcies', 'Current Credit Balance', 'Monthly Debt', \n",
+    "                            'errorsCS', 'Number of Open Accounts']\n",
+    "        self.columnsCLA = ['Current Loan Amount', 'Annual Income', 'Maximum Open Credit', 'Term', 'Current Credit Balance', \n",
+    "                           'Number of Open Accounts', 'Years of Credit History', 'Credit Score']\n",
+    "        \n",
+    "    def concat_values(self, df=None):\n",
     "        \"\"\"Объединение значений\"\"\"\n",
     "        \n",
-    "        df = self.df\n",
+    "        if df is None:\n",
+    "            df = self.df\n",
     "        \n",
     "        df.loc[df['Home Ownership'] == 'Have Mortgage', 'Home Ownership'] = 'Home Mortgage'\n",
     "        df.loc[df['Home Ownership'] == 'Rent', 'Home Ownership'] = 'Own Home'\n",
     "        \n",
-    "    def mark(self):\n",
+    "    def mark(self, df=None):\n",
     "        \"\"\"Пометка ошибок в данных\"\"\"\n",
     "        \n",
-    "        df = self.df\n",
+    "        if df is None:\n",
+    "            df = self.df\n",
     "        \n",
     "        df.loc[df['Current Loan Amount'] < 2e7, 'emissionsCLA'] = 0\n",
     "        df.loc[df['Current Loan Amount'] > 2e7, 'emissionsCLA'] = 1\n",
@@ -1165,10 +1181,11 @@
     "        df.loc[df['Annual Income'].notna(), 'omissionsAI'] = 0\n",
     "        df.loc[df['Annual Income'].isna(), 'omissionsAI'] = 1\n",
     "        \n",
-    "    def retype_in_float(self):\n",
+    "    def retype_in_float(self, df=None):\n",
     "        \"\"\"Ретипизация данных из строк в категории\"\"\"\n",
     "    \n",
-    "        df = self.df\n",
+    "        if df is None:\n",
+    "            df = self.df\n",
     "        \n",
     "        df['Home Ownership'] = df['Home Ownership'].map({'Home Mortgage': 0, 'Own Home': 1}).astype(float)\n",
     "        df['Term'] = df['Term'].map({'Short Term': 0, 'Long Term':1}).astype(float)\n",
@@ -1196,31 +1213,18 @@
     "        \n",
     "        df = self.df\n",
     "\n",
-    "        target='Annual Income'\n",
-    "        \n",
-    "        columns = ['Annual Income', 'Home Ownership', 'Tax Liens', 'Number of Open Accounts', 'Maximum Open Credit', \n",
-    "                   'Number of Credit Problems', 'Months since last delinquent', 'Current Loan Amount', \n",
-    "                   'Current Credit Balance', 'Monthly Debt', 'Credit Score']\n",
-    "        \n",
-    "        pred, self.model = pred_feature(df=df, target=target, columns=columns, \n",
+    "        pred, self.modelAnIn = pred_feature(df=df, target='Annual Income', columns=self.columnsAnIn, \n",
     "                                        max_depth=1, learning_rate=0.2, n_estimators=1950)\n",
-    "        df.loc[df[target].isna(), target] = pred\n",
+    "        df.loc[df['Annual Income'].isna(), 'Annual Income'] = pred\n",
     "        \n",
     "    def missingCrSc(self):\n",
     "        \"\"\"заполнение пропусков при помощи LGBM\"\"\"\n",
     "        \n",
     "        df = self.df\n",
     "        \n",
-    "        target = 'Credit Score'\n",
-    "        \n",
-    "        columns = ['Credit Score', 'Term', 'Current Loan Amount', 'Home Ownership', 'Annual Income', \n",
-    "                   'Years of Credit History', 'Maximum Open Credit', 'Number of Credit Problems', \n",
-    "                   'Months since last delinquent', 'Bankruptcies', 'Current Credit Balance', 'Monthly Debt', \n",
-    "                   'errorsCS', 'Number of Open Accounts']\n",
-    "        \n",
-    "        pred, self.model = pred_feature(df=df, target=target, columns=columns, \n",
+    "        pred, self.modelCrSc = pred_feature(df=df, target='Credit Score', columns=self.columnsCrSc, \n",
     "                                        max_depth=1, learning_rate=0.1, n_estimators=1300)\n",
-    "        df.loc[df[target].isna(), target] = pred\n",
+    "        df.loc[df['Credit Score'].isna(), 'Credit Score'] = pred\n",
     "        \n",
     "    def emissionsCS(self):\n",
     "        \"\"\"обработка выбросов путем деления на 10\"\"\"\n",
@@ -1250,14 +1254,15 @@
     "        \n",
     "        df.loc[df[target] > 2e7, target] = np.nan\n",
     "        \n",
-    "        pred, self.model = pred_feature(df=df, target=target, columns=columns, \n",
+    "        pred, self.modelCLA = pred_feature(df=df, target=target, columns=columns, \n",
     "                                        max_depth=1, learning_rate=0.1, n_estimators=490)\n",
     "        df.loc[df[target].isna(), target] = pred\n",
     "        \n",
-    "    def genering_features(self):\n",
+    "    def genering_features(self, df=None):\n",
     "        \"\"\"Генерация новых признаков\"\"\"\n",
     "        \n",
-    "        df = self.df\n",
+    "        if df is None:\n",
+    "            df = self.df\n",
     "        \n",
     "        df['Months to Maturity'] = df['Current Credit Balance']/df['Monthly Debt']\n",
     "        df.loc[df['Months to Maturity'].isna(), 'Months to Maturity'] = 0\n",
@@ -1270,17 +1275,18 @@
     "        for col in new_columns:\n",
     "            self.features.append(col)\n",
     "        \n",
-    "    def standard_data(self):\n",
+    "    def standard_data(self, df=None):\n",
     "        \"\"\"Стандартизация данных\"\"\"\n",
     "        \n",
-    "        df = self.df\n",
+    "        if df is None:\n",
+    "            df = self.df\n",
     "        \n",
     "        scaler = StandardScaler()\n",
     "        df[self.features] = scaler.fit_transform(df[self.features])\n",
     "\n",
     "        \n",
-    "    def fit(self):\n",
-    "        \"\"\"Порядок выполнения\"\"\"\n",
+    "    def fit_transform(self):\n",
+    "        \"\"\"Обучение пайплайна\"\"\"\n",
     "        \n",
     "        self.concat_values()\n",
     "        self.mark()\n",
@@ -1297,12 +1303,57 @@
     "\n",
     "        self.emissionsCLA()\n",
     "        \n",
-    "        genering_features()\n",
+    "        self.genering_features()\n",
     "        \n",
     "        self.standard_data()\n",
-    "    \n",
-    "    def transform(self):\n",
-    "        pass"
+    "        \n",
+    "    def transform(self, df):\n",
+    "        \n",
+    "        df = df.copy()\n",
+    "        \n",
+    "        self.concat_values(df)\n",
+    "        self.mark(df)\n",
+    "        self.retype_in_float(df)\n",
+    "        \n",
+    "        # first ommisions\n",
+    "        df.loc[df['Months since last delinquent'].isna(), 'Months since last delinquent'] = self.missMSLD\n",
+    "        df.loc[df['Bankruptcies'].isna(), 'Bankruptcies'] = self.missBankruptcies\n",
+    "        \n",
+    "        # first emmisions\n",
+    "        df.loc[df['Credit Score']>999, 'Credit Score'] = df.loc[df['Credit Score']>999, 'Credit Score'] / 10\n",
+    "        df.loc[df['Maximum Open Credit'] > 2e8, 'Maximum Open Credit'] = self.emmissMOC\n",
+    "        \n",
+    "        # Annual Income\n",
+    "        dfAnIn = df[self.columnsAnIn]\n",
+    "        dfAnIn = dfAnIn[dfAnIn['Annual Income'].isna()].drop('Annual Income', axis=1)\n",
+    "        \n",
+    "        pred = self.modelAnIn.predict(dfAnIn)\n",
+    "        \n",
+    "        df.loc[df['Annual Income'].isna(), 'Annual Income'] = pred\n",
+    "        \n",
+    "        # Credit Score\n",
+    "        dfCrSc = df[self.columnsCrSc]\n",
+    "        dfCrSc = dfCrSc[dfCrSc['Credit Score'].isna()].drop('Credit Score', axis=1)\n",
+    "        \n",
+    "        pred = self.modelCrSc.predict(dfCrSc)\n",
+    "        \n",
+    "        df.loc[df['Credit Score'].isna(), 'Credit Score'] = pred\n",
+    "        \n",
+    "        # Current Loan Amount\n",
+    "        df.loc[df['Current Loan Amount'] > 2e7, 'Current Loan Amount'] = np.nan\n",
+    "        \n",
+    "        dfCLA = df[self.columnsCLA]\n",
+    "        dfCLA = dfCLA[dfCLA['Current Loan Amount'].isna()].drop('Current Loan Amount', axis=1)\n",
+    "        \n",
+    "        pred = self.modelCLA.predict(dfCLA)\n",
+    "        \n",
+    "        df.loc[df['Current Loan Amount'].isna(), 'Current Loan Amount'] = pred\n",
+    "        \n",
+    "        self.genering_features(df)\n",
+    "        \n",
+    "        self.standard_data(df)\n",
+    "        \n",
+    "        return df"
    ]
   },
   {
@@ -1990,45 +2041,11 @@
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Home Ownership', 'Annual Income', 'Years in current job', 'Tax Liens',\n",
-       "       'Number of Open Accounts', 'Years of Credit History',\n",
-       "       'Maximum Open Credit', 'Number of Credit Problems',\n",
-       "       'Months since last delinquent', 'Bankruptcies', 'Purpose', 'Term',\n",
-       "       'Current Loan Amount', 'Current Credit Balance', 'Monthly Debt',\n",
-       "       'Credit Score', 'Credit Default'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Xy_df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
    "outputs": [],
    "source": [
     "# Отбор признаков\n",
-    "columns = ['Home Ownership', 'Annual Income', 'Tax Liens', 'Number of Open Accounts', 'Maximum Open Credit','Term', \n",
-    "           'Current Credit Balance', 'Monthly Debt', 'Credit Score', 'Current Loan Amount', \n",
-    "           'Months to Maturity', 'Credit Default', 'Monthly Income', 'Income Debt']\n",
-    "\n",
-    "# columns = ['Home Ownership', 'Annual Income', 'Tax Liens',\n",
-    "#            'Number of Open Accounts', 'Years of Credit History',\n",
-    "#            'Maximum Open Credit',\n",
-    "#            'Term', 'Months to Maturity',\n",
-    "#            'Current Loan Amount', 'Current Credit Balance', 'Monthly Debt',\n",
-    "#            'Credit Score', 'Credit Default']\n",
+    "columns = ['errorsCS', 'Credit Score', 'Term', 'Income Debt', 'emissionsCLA',\n",
+    "           'Credit Default']\n",
     "\n",
     "xy_prep.standard_data()\n",
     "\n",
@@ -2062,7 +2079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2070,15 +2087,16 @@
      "output_type": "stream",
      "text": [
       "f1 score:\n",
-      " \ttrain = 0.85\n",
-      " \ttest = 0.42\n",
+      " \ttrain = 0.6\n",
+      " \ttest = 0.53\n",
       "\n",
-      " \tdiff = 0.43\n"
+      " \tdiff = 0.07\n"
      ]
     }
    ],
    "source": [
-    "model_lgbm = LGBMClassifier(random_state=42)\n",
+    "model_lgbm = LGBMClassifier(n_estimators=600, max_depth=1, learning_rate=0.01, \n",
+    "                            random_state=42)\n",
     "model_lgbm.fit(X_train, y_train)\n",
     "\n",
     "y_train_pred = model_lgbm.predict(X_train)\n",
@@ -2096,7 +2114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2104,15 +2122,16 @@
      "output_type": "stream",
      "text": [
       "f1 score:\n",
-      " \ttrain = 0.96\n",
-      " \ttest = 0.39\n",
+      " \ttrain = 0.6\n",
+      " \ttest = 0.53\n",
       "\n",
-      " \tdiff = 0.57\n"
+      " \tdiff = 0.07\n"
      ]
     }
    ],
    "source": [
-    "model_xgb = XGBClassifier(random_state=42)\n",
+    "model_xgb = XGBClassifier(max_depth=1, n_estimators=600, eta=0.01, \n",
+    "                          random_state=42)\n",
     "model_xgb.fit(X_train, y_train)\n",
     "\n",
     "y_train_pred = model_xgb.predict(X_train)\n",
@@ -2130,7 +2149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2138,15 +2157,15 @@
      "output_type": "stream",
      "text": [
       "f1 score:\n",
-      " \ttrain = 0.62\n",
-      " \ttest = 0.5\n",
+      " \ttrain = 0.6\n",
+      " \ttest = 0.53\n",
       "\n",
-      " \tdiff = 0.12\n"
+      " \tdiff = 0.07\n"
      ]
     }
    ],
    "source": [
-    "model_catb = CatBoostClassifier(iterations=1000, learning_rate=0.05, depth=1, auto_class_weights='Balanced',\n",
+    "model_catb = CatBoostClassifier(iterations=600, learning_rate=0.01, depth=1,\n",
     "                                random_state=42, silent=True)\n",
     "model_catb.fit(X_train, y_train)\n",
     "\n",
@@ -2157,8 +2176,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Просмотрим важность признаков"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2188,92 +2214,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>8</td>\n",
-       "      <td>Credit Score</td>\n",
-       "      <td>42.165570</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>Term</td>\n",
-       "      <td>14.853377</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>12</td>\n",
-       "      <td>Income Debt</td>\n",
-       "      <td>9.960681</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>Annual Income</td>\n",
-       "      <td>5.444748</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>Maximum Open Credit</td>\n",
-       "      <td>5.257801</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>11</td>\n",
-       "      <td>Monthly Income</td>\n",
-       "      <td>5.187750</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>9</td>\n",
-       "      <td>Current Loan Amount</td>\n",
-       "      <td>4.665149</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7</td>\n",
-       "      <td>Monthly Debt</td>\n",
-       "      <td>2.582846</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>10</td>\n",
-       "      <td>Months to Maturity</td>\n",
-       "      <td>2.342149</td>\n",
+       "      <td>emissionsCLA</td>\n",
+       "      <td>77.369036</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>Home Ownership</td>\n",
-       "      <td>2.022418</td>\n",
+       "      <td>errorsCS</td>\n",
+       "      <td>12.734874</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>Number of Open Accounts</td>\n",
-       "      <td>1.963318</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6</td>\n",
-       "      <td>Current Credit Balance</td>\n",
-       "      <td>1.811563</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Credit Score</td>\n",
+       "      <td>5.214871</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>Tax Liens</td>\n",
-       "      <td>1.742629</td>\n",
+       "      <td>Term</td>\n",
+       "      <td>3.515016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Income Debt</td>\n",
+       "      <td>1.166203</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               feature_name  importance\n",
-       "8              Credit Score   42.165570\n",
-       "5                      Term   14.853377\n",
-       "12              Income Debt    9.960681\n",
-       "1             Annual Income    5.444748\n",
-       "4       Maximum Open Credit    5.257801\n",
-       "11           Monthly Income    5.187750\n",
-       "9       Current Loan Amount    4.665149\n",
-       "7              Monthly Debt    2.582846\n",
-       "10       Months to Maturity    2.342149\n",
-       "0            Home Ownership    2.022418\n",
-       "3   Number of Open Accounts    1.963318\n",
-       "6    Current Credit Balance    1.811563\n",
-       "2                 Tax Liens    1.742629"
+       "   feature_name  importance\n",
+       "4  emissionsCLA   77.369036\n",
+       "0      errorsCS   12.734874\n",
+       "1  Credit Score    5.214871\n",
+       "2          Term    3.515016\n",
+       "3   Income Debt    1.166203"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2287,6 +2265,65 @@
     "feature_importances.sort_values(by='importance', ascending=False, inplace=True)\n",
     "feature_importances"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Предсказание финальных данных"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# предлбрабатываем финальный датасет\n",
+    "X_final_transform = xy_prep.transform(df=X_final)\n",
+    "\n",
+    "# отбираем признаки\n",
+    "columns = ['errorsCS', 'Credit Score', 'Term', 'Income Debt', 'emissionsCLA']\n",
+    "\n",
+    "X_final_transform = X_final_transform[columns]\n",
+    "\n",
+    "# предсказываем результаты\n",
+    "y_final_pred = model_catb.predict(X_final_transform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0, 1, ..., 0, 0, 1], dtype=int64)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_final_pred"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Сохранение результатов"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
